# RustLab2023

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.sqlx/: query-23cd7b8c607bf93795a4934fc8f3bad996c611e77325e9ff7bcf4b601e2cb1b0.json  query-4190fdce4cdf567b8983a647101910f702d381ae6d66aaac5706974cd9c5b776.json  query-4d9289fc78785afd1a1d5a0046751a7c7542e9d0d3fb6ba7b64f462d4b9bcc61.json  query-5f02b6c9243adaa06507b309a0aeb27f51348713a02f95cd1c3651f75f44f60b.json  query-7a15a21f87dca78b9c91688cb5b19af9a6ff3999a420b76441df4f04e8dc453a.json  query-ac71293ed84a74f25b2e10ee4140b40c54981f25124b5b7f83dd74cabb4af34b.json  query-e4762dfd6d7a83fbc26b5123261dee9b6c31ff5c753f18bf773e92671e91a66a.json
db/migrations/: 20231118222805_init.up.sql  20231119063901_user_pending.down.sql  20231119063901_user_pending.up.sql  20231119125855_patients.down.sql  20231119125855_patients.up.sql
src/: auth.rs  dashboard.rs  db.rs  main.rs  user.rs
src/policy/: auth.rs  error.rs  mod.rs  role.rs
templates/: base.html.tera  dashboard.html.tera  error.html.tera  login.html.tera  macros.html.tera  pending.html.tera  register.html.tera
